syntax = "proto3";

package LegalEntityChecker;

// Сервис для получения информации о юридическом лице
service LegalEntityChecker {
  // Получить информацию о компании
  rpc GetLegalEntityInfo (LegalEntityInfoRequest) returns (LegalEntityInfo);
}

// Запрос информации
message LegalEntityInfoRequest {
  int64 Tin = 1;
}

message LegalEntityInfo {
  BasicInfo basicInfo = 1;
  ProceedingsInfo proceedingsInfo = 2;
  FinanceInfo financeInfo = 3;
}

// Основная информация о юридическом лице
message BasicInfo {
  // Короткое имя
  string name = 1;
  // ИНН
  int64 tin = 2;
  // Дата регистрации юридического лица
  int64 incorporationDate = 3;
  // Уставной капитал
  double authorizedCapital = 4;
  // Численность сотрудников
  int32 employeesNumber = 5;
  // Юридический адрес
  string address = 6;
  // Статус
  LegalEntityStatus legalEntityStatus = 7;
  // Руководитель
  Manager manager = 8;
  // Учредители
  repeated Shareholder shareholders = 9;
}

// Информация о взысканиях ФССП
message ProceedingsInfo {
  double amount = 1;
  int64 count = 2;
  string description = 3;
}

// Финансовая информация
message FinanceInfo {
  // Отчётный год
  int32 year = 1;

  // 2110 Выручка 
  double income = 2;
  // 2400 Чистая прибыль
  double profit = 4;

  // Баланс (актив)
  // 1230 Дебиторская задолженность
  double accountsReceivable = 3;
 
  // Баланс (пассив)
  // 1300 Капитал и резервы
  double capitalAndReserves = 5;
  // 1400 Долгосрочные обязательства
  double longTermLiabilities = 6;
  // 1500 Краткосрочные обязательства
  double currentLiabilities = 7;

  // 4122 Платежи в связи с оплатой труда работников
  double paidSalary = 8;
}

// Статус юридического лица
enum LegalEntityStatus
{
  // Действующее
  Active = 0;
  // Процедура банкротства
  Bankruptcy = 1;
  // В процессе реорганизации
  InReorganizationProcess = 2;
  // В процессе ликвидации
  InTerminationProcess = 3;
  // Ликвидировано
  Terminated = 4;
}

// Руководитель
message Manager {
  int64 tin = 1;
  string name = 2;
  string position = 3;
}

// Учредители
message Shareholder {
  EntityType type = 1;
  int64 tin = 2;
  string name = 3;
  double share = 4;
  double size = 5;
}

enum EntityType {
  Company = 0;
  Person = 1;
  ForeignCompany = 2;
  Entrepreneur = 3;
  MunicipalSubject = 4;
}
