syntax = "proto3";

import "LegalEntities.proto";
import "CredChecker.proto";

package ReportProvider;

service ReportProvider {
  rpc GetGeneralInfo (ReportRequest) returns (GeneralInfo);
  rpc GetLegalEntityInfo (ReportRequest) returns (LegalEntityChecker.LegalEntityInfo);
  rpc GetReviewsInfo (ReportRequest) returns (ReviewsInfo);
  rpc GetSalariesInfo (ReportRequest) returns (SalariesInfo);
}

message ReportRequest {
  int64 Tin = 1;
}

// Основная информация о компании
message GeneralInfo {
  // Короткое имя
  string name = 1;
  // ИНН
  int64 tin = 2;
  // Дата регистрации юридического лица
  int64 incorporationDate = 3;
  // Уставной капитал
  double authorizedCapital = 4;
  // Численность сотрудников
  int32 employeesNumber = 5;
  // Юридический адрес
  string address = 6;
  // Статус компании
  LegalEntityChecker.LegalEntityStatus legalEntityStatus = 7;
  // Статус аккредитации
  cred_checker.CreditState accreditationState = 8;
  // Есть сведения о невыплате зарплаты
  bool salaryDelays = 9;  
  // Год
  int32 year = 10;
  // Выручка
  double income = 11;
  // Прибыль (убыток)
  double profit = 12;
}

// Зарплаты
message SalariesInfo {

}

// Отзывы
message ReviewsInfo {

}